# ForgeworkLights

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  EDIT_FEATURE.md  FLOATING-TUI-SETUP.md  README.md  hyprland-rules.conf  install.sh  requirements.txt  themes.json  uninstall.sh
3D Models/BlankLEDCover/: BlankLEDCover.stl
3D Models/OmarchyLEDCover/: Omarchy.3mf  Omarchy.stl
3D Models/Top_Plate_LED_Mount/: Top_Plate_LED_Mount_V2.3mf  Top_Plate_LED_Mount_V2.stl
config/: config.toml.sample  example.themes.json  hyprland-shortcuts.conf  led_themes.json  tui-theme.toml
include/: animations.hpp  argb_daemon.hpp  cli.hpp  color.hpp  color_utils.hpp  config.hpp  framework_tool.hpp  palette.hpp  palette_loader.hpp  theme.hpp  theme_database.hpp  theme_watcher.hpp
readmore/: ARCHITECTURE.md  DEPENDENCIES.md  FLOATING-TUI-SETUP.md  THEMES-LED-README.md  THEMES-TUI-README.md
scripts/: generate-14-colors.py  generate-colors.py  generate-tui-theme.py  launch-tui-floating.sh  options-tui.py  show-gradient.sh  sync-themes.py
scripts/tui/: __init__.py  app.py  constants.py  styles.py  sync_themes.py  theme.py
scripts/tui/animations/: __init__.py
scripts/tui/utils/: __init__.py  colors.py
scripts/tui/widgets/: __init__.py  animations.py  animations.py.backup  borders.py  brightness.py  color_selector.py  countdown_bar.py  gradient.py  logs.py  parameter_slider.py  slider.py  status.py  theme_button.py  theme_creator.py  theme_selection.py
src/: argb_daemon.cpp  cli.cpp  color_utils.cpp  config.cpp  framework_tool.cpp  fw_root_helper.cpp  main.cpp  palette.cpp  palette_loader.cpp  theme.cpp  theme_database.cpp  theme_watcher.cpp
systemd/: forgeworklights.service  omarchy-argb.service
tests/: README.md  test_root_helper.sh
waybar/: README.md  forgework-lights.css
